--- a/almacenamiento.bib
+++ b/almacenamiento.bib
@@ -93,7 +93,7 @@
   pages = {215824401668513},
   issn = {2158-2440, 2158-2440},
   doi = {10.1177/2158244016685136},
-  file = {files/8675/Bishop y Kuula-Luumi - 2017 - Revisiting Qualitative Data Reuse A Decade On.pdf},
+  file = {C\:\\Users\\Francisco Meneses R\\Zotero\\storage\\ZSE3IUGY\\Bishop y Kuula-Luumi - 2017 - Revisiting Qualitative Data Reuse A Decade On.pdf},
   journal = {SAGE Open},
   language = {en},
   number = {1}
@@ -198,7 +198,7 @@
   pages = {1260},
   issn = {2162-3309},
   doi = {10.7710/2162-3309.1260},
-  file = {files/8073/Crowder et al. - 2015 - File Naming in Digital Media Research Examples fr.pdf},
+  file = {C\:\\Users\\Francisco Meneses R\\Zotero\\storage\\KGZRNDYU\\Crowder et al. - 2015 - File Naming in Digital Media Research Examples fr.pdf},
   journal = {Journal of Librarianship and Scholarly Communication},
   number = {3}
 }
@@ -213,7 +213,7 @@
   pages = {221--247},
   issn = {0187358X},
   doi = {10.1016/j.ibbai.2016.10.010},
-  file = {files/8704/Cruz Mundet y Díez Carrera - 2016 - Sistema de Información de Archivo Abierto (OAIS) .pdf},
+  file = {C\:\\Users\\Francisco Meneses R\\Zotero\\storage\\2RG9F98T\\Cruz Mundet y Díez Carrera - 2016 - Sistema de Información de Archivo Abierto (OAIS) .pdf},
   journal = {Investigaci\'on Bibliotecol\'ogica: Archivonom\'ia, Bibliotecolog\'ia e Informaci\'on},
   language = {es},
   number = {70}
@@ -468,7 +468,7 @@
   month = oct,
   institution = {{Politics and International Relations}},
   doi = {10.33774/apsa-2019-if2he-v2},
-  file = {files/8673/Kapiszewski y Karcher - 2019 - Transparency in Practice in Qualitative Research.pdf},
+  file = {C\:\\Users\\Francisco Meneses R\\Zotero\\storage\\IYLAVJ4A\\Kapiszewski y Karcher - 2019 - Transparency in Practice in Qualitative Research.pdf},
   type = {Preprint}
 }
 
@@ -787,6 +787,21 @@
   howpublished = {https://www.software.ac.uk/blog/2020-12-17-ten-arguments-against-open-science-you-can-win}
 }
 
+@article{tierney_Realistic_2020,
+  title = {A {{Realistic Guide}} to {{Making Data Available Alongside Code}} to {{Improve Reproducibility}}},
+  author = {Tierney, Nicholas J. and Ram, Karthik},
+  year = {2020},
+  month = feb,
+  abstract = {Data makes science possible. Sharing data improves visibility, and makes the research process transparent. This increases trust in the work, and allows for independent reproduction of results. However, a large proportion of data from published research is often only available to the original authors. Despite the obvious benefits of sharing data, and scientists' advocating for the importance of sharing data, most advice on sharing data discusses its broader benefits, rather than the practical considerations of sharing. This paper provides practical, actionable advice on how to actually share data alongside research. The key message is sharing data falls on a continuum, and entering it should come with minimal barriers.},
+  archivePrefix = {arXiv},
+  eprint = {2002.11626},
+  eprinttype = {arxiv},
+  file = {C\:\\Users\\Francisco Meneses R\\Zotero\\storage\\FSUN9RYE\\Tierney y Ram - 2020 - A Realistic Guide to Making Data Available Alongsi.pdf;C\:\\Users\\Francisco Meneses R\\Zotero\\storage\\UIGUZWFT\\2002.html},
+  journal = {arXiv:2002.11626 [cs]},
+  keywords = {Computer Science - Digital Libraries},
+  primaryClass = {cs}
+}
+
 @misc{unesco_Que_2020,
   title = {\textquestiondown{{Qu\'e}} Es {{Ciencia Abierta}}? {{UNESCO}} Lanza Consulta Global},
   author = {UNESCO},
@@ -833,7 +848,7 @@
   issn = {0022-2194, 1538-4780},
   doi = {10.1177/0022219420945267},
   abstract = {The Open Science movement has gained considerable traction in the last decade. The Open Science movement tries to increase trust in research results and open the access to all elements of a research project to the public. Central to these goals, Open Science has promoted five critical tenets: Open Data, Open Analysis, Open Materials, Preregistration, and Open Access. All Open Science elements can be thought of as extensions to the traditional way of achieving openness in science, which has been scientific publication of research outcomes in journals or books. Open Science in education sciences, however, has the potential to be much more than a safeguard against questionable research. Open Science in education science provides opportunities to (a) increase the transparency and therefore replicability of research and (b) develop and answer research questions about individuals with learning disabilities and learning difficulties that were previously impossible to answer due to complexities in data analysis methods. We will provide overviews of the main tenets of Open Science (i.e., Open Data, Open Analysis, Open Materials, Preregistration, and Open Access), show how they are in line with grant funding agencies' expectations for rigorous research processes, and present resources on best practices for each of the tenets.},
-  file = {files/8082/10.11770022219420945267-6.pdf},
+  file = {C\:\\Users\\Francisco Meneses R\\Zotero\\storage\\KRS5ZKHN\\10.11770022219420945267-6.pdf},
   journal = {Journal of Learning Disabilities},
   language = {en}
 }
